# ros2_voice_visual_armer

./: LICENSE  README.md  test_arm_move.py
arm_controller/: CMakeLists.txt  package.xml
arm_controller/action/: ArmInterface.action
arm_controller/src/: arm_manage_server.cpp
astra_camera_ros/astra_camera/: CMakeLists.txt
astra_camera_ros/astra_camera/config/: camera_info_color.yaml  camera_info_ir.yaml
astra_camera_ros/astra_camera/include/astra_camera/: ros_param_backend.h
astra_camera_ros/astra_camera/include/astra_camera/point_cloud_proc/: point_cloud_xyz.h  point_cloud_xyzrgb.h
astra_camera_ros/astra_camera/launch/: astra.launch.xml  astra_pro.launch.xml
astra_camera_ros/astra_camera/src/: ros_param_backend.cpp
astra_camera_ros/astra_camera/src/point_cloud_proc/: point_cloud_xyz.cpp  point_cloud_xyzrgb.cpp
hand_eye_calibration/: package.xml  setup.py
hand_eye_calibration/hand_eye_calibration/: calibration_result.yaml  calibrator_node.py  test_calibration.py
llama_ros/llama_ros/: CMakeLists.txt  package.xml
llama_ros/llama_ros/src/: llama_action_server.cpp
llama_ros/llama_ros_msgs/: CMakeLists.txt  package.xml
llama_ros/llama_ros_msgs/action/: Llama.action
object_detect/: CMakeLists.txt  package.xml
object_detect/src/: apple_detect.cpp
paddle_speech_ros/paddle_speech_msgs/: CMakeLists.txt  package.xml
paddle_speech_ros/paddle_speech_msgs/action/: TTS.action
paddle_speech_ros/paddle_speech_ros/: package.xml  setup.cfg  setup.py
paddle_speech_ros/paddle_speech_ros/paddle_speech_ros/: tts_action_server.py
qyu_bringup/: CMakeLists.txt  package.xml
qyu_bringup/launch/: bringup.launch.py  bringup_no_camera.launch.py
whisper_ros/whisper_bringup/config/: silero_vad.yaml  whisper.yaml
whisper_ros/whisper_cpp_vendor/: CMakeLists.txt
whisper_ros/whisper_demos/: CMakeLists.txt  package.xml
whisper_ros/whisper_demos/src/: whisper_demo_nonstop_node.cpp
whisper_ros/whisper_hfhub_vendor/: CMakeLists.txt
whisper_ros/whisper_onnxruntime_vendor/: CMakeLists.txt
