<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>arm_controller</name>
  <version>0.0.0</version>
  <description>ARM controller package with YOLOv8 object detection</description>
  <maintainer email="hl@todo.todo">hl</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>rosidl_default_runtime</depend>
  <depend>sensor_msgs</depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>

  <build_depend>OpenCV</build_depend>
  <exec_depend>OpenCV</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
