<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>qyu_bringup</name>
  <version>1.0.0</version>
  <description>Bringup package for QYU voice interaction system</description>
  <maintainer email="3352885695@qq.com">hl</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>paddle_speech_ros</depend>
  <depend>llama_ros</depend>
  <depend>whisper_bringup</depend>
  <depend>whisper_demos</depend>
  <depend>astra_camera</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
