<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>llama_ros</name>
  <version>1.0.0</version>
  <description>Llama ROS Package - Action Server for LLM Inference</description>
  <maintainer email="3352885695@qq.com">hl</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>llama_ros_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>arm_controller</depend>
  <depend>image_transport</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
