<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>paddle_speech_ros</name>
  <version>1.0.0</version>
  <description>Paddle Speech ROS Action Server</description>
  <maintainer email="3352885695@qq.com">hl</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <depend>rclpy</depend>
  <depend>rclpy_action</depend>
  <depend>paddle_speech_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
